# cockpit

./: Makefile.am  package.json  webpack.config.js
bower_components/: .gitignore
lib/: cockpit-components-select.jsx  patternfly.css
pkg/base/: Makefile.am  bootstrap-datetimepicker.min.css  cockpit.css  jquery.js  jquery.min.js
pkg/base1/: cockpit.css  cockpit.js  jquery.min.js
pkg/docker/: containers-view.jsx  docker.css  index.html
pkg/kubernetes/: Makefile.am
pkg/kubernetes/scripts/: projects.js
pkg/kubernetes/styles/: images.less  layers.less
pkg/kubernetes/views/: add-member-role-dialog.html
pkg/lib/: cockpit-components-file-autocomplete.css  cockpit-components-file-autocomplete.jsx  cockpit-components-plot.jsx  hooks.js  plot.js
pkg/networkmanager/: firewall-client.js  firewall.jsx  index.html  interfaces.js  networking.css
pkg/packagekit/: updates.less
pkg/playground/: plot-pf4.html  plot-pf4.js  plot-svg.js
pkg/shell/: Makefile.am  STYLE.html  cockpit-accounts.js  cockpit-dashboard.js  cockpit-networking.js  cockpit-server.js  index.html  plot.js  shell.css  shell.html
pkg/storaged/: details.js  devices.html  devices.js  dialog.js  dialog.jsx  index.html  plot.jsx  storage.css  storage.scss
pkg/subscriptions/: Makefile.am  index.html  subscriptions-client.js  subscriptions-register.jsx  subscriptions-view.jsx  subscriptions.css  subscriptions.js
pkg/systemd/: host.js  index.html  service.js
test/: check-storage-multipath  check-system-info  vm-test
test/verify/: check-networking  check-networking-firewall  check-storage-lvm2  check-subscriptions  storagelib.py
tools/: cockpit.spec
